# ParkingApp_MAD2

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  SETUP_AND_RUN.md  dump.rdb  package-lock.json  package.json  pyproject.toml  replit.md  run.py  start_all.sh
Parking_App_22f3001838 3/Parking_App_22f3001838/: README.md  api-documentation.yaml  app.py  models.py  requirements.txt
Parking_App_22f3001838 3/Parking_App_22f3001838/static/: styles.css
Parking_App_22f3001838 3/Parking_App_22f3001838/templates/: about.html  admin_dashboard.html  base.html  book_spot.html  booking_confirmation.html  contact.html  edit_city.html  edit_parking_lot.html  edit_parking_spot.html  edit_profile.html  help.html  index.html  login.html  manage_bookings.html  manage_locations.html  manage_users.html  my_bookings.html  occupy_spot.html  parking_lot_details.html  parking_spots.html  payment_receipt.html  pricing.html  profile.html  register.html  (+5 more)
attached_assets/: Pasted-Core-Functionalities-Admin-login-and-User-login-A-login-register-form-with-fields-like-username-p-1764440450918_1764440450919.txt  Pasted-Modern-Application-Development-II-Project-Statement-Vehicle-Parking-App-V2-It-is-a-multi-user-a-1764493081816_1764493081817.txt  Pasted-Vehicle-Parking-App-V2-It-is-a-multi-user-app-one-requires-an-administrator-and-other-users-tha-1764429309187_1764429309187.txt
backend/: app.py  celery_app.py  celerybeat-schedule.dir  config.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: app.js  index.html
frontend/src/: App.vue  main.js
(+32 files in other folders)
